# ticker-realtime-ml

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-render.txt  ticker-project-spec.md  ticker-project-ui.jsx
backend/: config.py  database.py  main.py
backend/models/: tickernet.py  train.py
backend/pipeline/: features.py  inference.py  ingest.py  orchestrator.py  transform.py
backend/pipeline/providers/: __init__.py  alpha_vantage.py  base.py  finnhub.py  synthetic.py
backend/routers/: alerts.py  model.py  pipeline.py  symbols.py  ws.py
backend/services/: alert_engine.py  stream_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css  ws.js
frontend/src/components/: AlertFeed.jsx  AlertItem.jsx  BottomBar.jsx  ConfidenceBar.jsx  Icons.jsx  ModelCard.jsx  PipelineStrip.jsx  Sparkline.jsx  StockRow.jsx  StockTable.jsx  TopBar.jsx
tests/: conftest.py  test_api.py  test_features.py  test_model.py  test_pipeline.py
